feat: 添加用户状态字段和获取所有用户功能，封禁用户逻辑